Save hash of source file when generating whack-run

--- a/whack-run/makefile
+++ b/whack-run/makefile
@@ -1,5 +1,7 @@
+WHACK_RUN_SOURCE_HASH=$(shell sha1sum whack-run.c | sed -n 's/\(\S*\).*/\1/p')
+
 whack-run: whack-run.c
-	gcc whack-run.c -owhack-run -Wall -Werror -std=gnu99
+	gcc whack-run.c -owhack-run -Wall -Werror -std=gnu99 -DWHACK_RUN_SOURCE_HASH=\"$(WHACK_RUN_SOURCE_HASH)\"
 
 install: whack-run
 	mkdir -p /usr/local/whack
