--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [tox]
-envlist = py26,py27
+envlist = py26,py27,py32,py33
 [testenv]
 deps=-r{toxinidir}/test-requirements.txt
 commands=nosetests tests
