--- a/tox.ini
+++ b/tox.ini
@@ -2,4 +2,6 @@
 envlist = py26,py27,py32,py33
 [testenv]
 deps=-r{toxinidir}/test-requirements.txt
-commands=nosetests tests
+commands=
+    pyflakes whack tests
+    nosetests tests
